@@ -1,3 +1,13 @@
+2011-11-08  Lucas Forschler  <lforschler@apple.com>
+
+        https://bugs.webkit.org/show_bug.cgi?id=71839
+        Update the leaks bot OS to Lion.
+        Update the config.json to reflect the update.
+
+        Reviewed by Stephanie Lewis.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2011-11-08  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r99626.
